# zako3

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMAND_PLAN.md  COMMAND_PLAN_2.md  Cargo.toml  LICENSE  README.ko.md  README.md  README_KR.md  SUMMARY_REPORT.md  TL.md  TODO.md  docker-compose.yml  fix.py  fix_cli.py  flake.nix  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  traffic-light-and-hq-architecture-summary.md
audio-engine/: Cargo.toml  METRICS.md  TODO.md
audio-engine/audio/: Cargo.toml
audio-engine/audio/src/: decoder.rs  lib.rs  metrics.rs  mixer.rs  speed_control.rs  stream_input.rs  types.rs  util.rs
audio-engine/client/: Cargo.toml
audio-engine/client/src/: client.rs  lib.rs
audio-engine/controller/: .env.example  Cargo.toml
audio-engine/controller/src/: config.rs  lib.rs  main.rs  ready_waiter.rs  server.rs
audio-engine/core/: Cargo.toml
audio-engine/core/src/engine/: session.rs  session_manager.rs
audio-engine/core/src/service/: discord.rs  state.rs
audio-engine/core/src/util/: queue_name_gen.rs
audio-engine/infra/: Cargo.toml
audio-engine/infra/src/: discord.rs  state.rs  taphub.rs
audio-engine/protos/: build.rs
audio-engine/src/: constant.rs  engine.rs  error.rs  infra.rs  main.rs  service.rs  types.rs  util.rs
audio-engine/src/codec/: decoder.rs
audio-engine/src/engine/: controller.rs  loader.rs  mixer.rs  session.rs
audio-engine/src/engine/session/: control.rs  core.rs
audio-engine/src/engine/tests/: mod.rs  session_control_test.rs
audio-engine/src/infra/: stream_cache.rs
audio-engine/src/service/: discord.rs  state.rs  stream_cache.rs  taphub.rs
audio-engine/src/util/: id_gen.rs  queue_name_gen.rs
audio-engine/types/: Cargo.toml
audio-engine/types/src/: lib.rs
crates/ae-transport/: Cargo.toml
crates/ae-transport/src/: client.rs  codec.rs  error.rs  handler.rs  lib.rs  server.rs
crates/ae-transport/tests/: transport_integration.rs
crates/cache-client/: Cargo.toml
crates/cache-client/src/: client.rs  dto.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: error.rs  history.rs  lib.rs  redis_metrics.rs  service.rs
crates/preload-cache/: Cargo.toml
crates/preload-cache/src/: cache.rs  db.rs  lib.rs  preload.rs  types.rs
crates/preload-cache/tests/: cache.rs
crates/states/: Cargo.toml
crates/states/src/: cache_repo.rs  error.rs  intended_vc.rs  lib.rs  pubsub.rs  tap_hub.rs  tap_metrics.rs  user_settings.rs  voice_state.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  metrics.rs  tracing.rs
crates/tts-matching/: Cargo.toml  build.rs
crates/tts-matching/src/: db.rs  error.rs  lib.rs  model.rs  pipeline.rs  service.rs
crates/tts-matching/src/repo/: mapper.rs  mod.rs  pipeline.rs
crates/tts-matching/src/wasm/: host.rs  input.rs  mod.rs  runner.rs
crates/tts-matching/tests/: integration_test.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs
crates/types/src/hq/: constants.rs  (+13 more)
crates/zakofish-taphub/: Cargo.toml
crates/zakofish-taphub/examples/: taphub.rs
crates/zakofish-taphub/src/: hub.rs  lib.rs
crates/zakofish-taphub/tests/: integration.rs  pf3_integration.rs
emoji-matcher/: Cargo.toml  Dockerfile
emoji-matcher/src/: config.rs
emoji-matcher/src/handlers/: match_emoji.rs  match_nats.rs
emoji-matcher/src/utils/: image.rs
emoji-matcher/tests/: integration_test.rs
hq/backend/: Cargo.toml
hq/backend/src/: lib.rs  rpc.rs
hq/boot/: .env.example  Cargo.toml
hq/boot/scripts/: dev-pg.sh
hq/boot/src/: main.rs
hq/bot/: Cargo.toml
hq/bot/src/: discord_resolver.rs  error.rs  lib.rs
hq/core/: Cargo.toml
hq/core/migrations/: 20260405000001_api_keys.sql  20260405000002_audit_logs.sql  20260405000003_tap_metrics.sql  20260405000005_user_permissions.sql  20260405000007_tap_roles.sql  20260405000009_change_uuids_to_bigint.sql  20260405000010_verification_requests.sql  20260406000002_user_settings.sql  20260407000001_tap_base_volume.sql  20260407000003_enabled_tts_channels.sql
hq/core/src/: config.rs  error.rs  lib.rs
hq/server/: CLAUDE.md  Cargo.toml  TASK_GUIDE.md  TASK_GUIDE_KO.md  architecture_example.md  architecture_suggestion.md
hq/server/migrations/: 20251003225658_identity.down.sql  20251003225658_identity.up.sql  20251003225658_user.up.sql  20251005031031_settings.down.sql  20251005031031_settings.up.sql  20251031060103_tap.down.sql  20251031060103_tap.up.sql
hq/server/src/: controller.rs  feature.rs  lib.rs  util.rs
hq/server/tests/: db.rs  identity.rs  settings.rs  tap.rs  token.rs  user.rs
libs/tts-matching-sdk/: Cargo.toml
libs/tts-matching-sdk/src/: host.rs  lib.rs  types.rs
libs/zakofish/: Cargo.toml
libs/zakofish/examples/: tap.rs
libs/zakofish/src/: config.rs  error.rs  lib.rs  tap.rs  tap_pf3.rs  tap_streams.rs
tap-sdk/: Cargo.toml
tap-sdk/src/: builder.rs  error.rs  handler.rs  lib.rs  source.rs
tap-sdk/src/encode/: encoder.rs  mod.rs
taphub/core/: .env.example  Cargo.toml
taphub/core/src/: app.rs  config.rs  handler.rs  hub.rs  lib.rs  main.rs  metrics.rs  routing.rs  transport.rs
types/: Cargo.toml
types/src/: cache.rs  error.rs  lib.rs  session_state.rs  taphub.rs
types/src/hq/: api_key.rs  audit_log.rs  dtos.rs  id.rs  mapper.rs  misc.rs  mod.rs  notification.rs  permission.rs  playback.rs  rpc.rs  settings.rs  tap.rs  user.rs  verification.rs  zod_impls.rs
worker/cache-gc/: Cargo.toml
worker/cache-gc/src/: config.rs  main.rs
worker/cache-gc/tests/: smoke.rs
worker/metrics-sync/: .env.example  Cargo.toml
worker/metrics-sync/src/: main.rs
zakoctl/: Cargo.toml
zakoctl/src/: cli.rs  config.rs  main.rs
zakoctl/src/services/: mod.rs
zakofish/: Cargo.toml  README.md
zakofish/examples/: tap.rs  taphub.rs
zakofish/src/: config.rs  hub.rs  lib.rs  tap.rs
zakofish/src/protocol/: codec.rs
zakofish/src/tap/: mod.rs
zakofish/src/types/: message.rs  model.rs
zakofish/tap/src/: tap.rs
zakofish/taphub/: Cargo.toml
zakofish/taphub/src/: hub.rs
zakofish/tests/: integration.rs
(+927 files in other folders)
