[workspace]
resolver = "3"
members = ["audio-engine/audio","audio-engine/controller","audio-engine/core", "audio-engine/infra", "audio-engine/protos", "audio-engine/telemetry", "worker/emoji-matcher", "hq/backend", "hq/boot", "hq/bot", "hq/core", "taphub/core", "taphub/transport/client", "taphub/transport/lib", "taphub/transport/server", "types", "vendor/zod_gen", "zakoctl", "zakofish", "worker/metrics-sync", "crates/states"]

[workspace.dependencies]
zako3-audio-engine-controller = { path = "audio-engine/controller" }
zako3-audio-engine-core = { path = "audio-engine/core" }
zako3-audio-engine-infra = { path = "audio-engine/infra" }
zako3-audio-engine-protos = { path = "audio-engine/protos" }
zako3-audio-engine-telemetry = { path = "audio-engine/telemetry" }
zako3-audio-engine-audio = { path = "audio-engine/audio", features = ["telemetry"] }

zako3-taphub-transport-client = { path = "taphub/transport/client" }

zako3-types = { path = "types" }

zakofish = { path = "zakofish" }

# HQ Dependencies
hq-types = { path = "types", package = "zako3-types" }
hq-core = { path = "hq/core" }
hq-backend = { path = "hq/backend" }
hq-bot = { path = "hq/bot" }

tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.2"
oauth2 = "4.4"
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenvy = "0.15"
config = "0.13"
anyhow = "1.0"
mockall = "0.12"
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }
songbird = { version = "0.5.0", git = "https://github.com/mincomk/songbird" }

[profile.dev]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0
panic = "unwind"

[profile.test]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0


[patch.crates-io.zod_gen]
path = "vendor/zod_gen"
