[workspace]
resolver = "3"
members = [
    "crates/preload-cache",
    "crates/states",
    "crates/telemetry",
    "crates/types",
    "crates/taphub-transport/client",
    "crates/taphub-transport/lib",
    "crates/taphub-transport/server",
    "crates/tts-matching",

    "libs/*",
    "services/*/*",
    "workers/*",
    "zakoctl",
]

[workspace.dependencies]
zako3-telemetry = { path = "crates/telemetry" }

zako3-taphub-transport-client = { path = "crates/taphub-transport/client" }
zako3-taphub-transport-server = { path = "crates/taphub-transport/server" }
zako3-audio-engine-client = { path = "services/audio-engine/client" }
zako3-preload-cache = { path = "crates/preload-cache" }
zako3-types = { path = "crates/types" }
zako3-states = { path = "crates/states" }

zako3-tts-matching = { path = "crates/tts-matching" }

zakofish = { path = "libs/zakofish" }
zakofish-taphub = { path = "crates/zakofish-taphub" }
zako3-tap-sdk = { path = "libs/tap-sdk" }

# HQ Dependencies
hq-types = { path = "crates/types", package = "zako3-types" }

zod_gen = { path = "vendor/zod_gen", version = "1.3.0" }

tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.2"
oauth2 = "4.4"
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenvy = "0.15"
config = "0.13"
anyhow = "1.0"
mockall = "0.12"
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }
songbird = { version = "0.5.0", git = "https://github.com/mincomk/songbird" }
protofish2 = { version = "0.6.1", features = ["opus", "jitter"] }
async-nats = "0.45.0"

[profile.dev]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0
panic = "unwind"

[profile.test]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0


[patch.crates-io.zod_gen]
path = "vendor/zod_gen"

[patch.crates-io.protofish2]
git = "https://github.com/mincomk/protofish2-rs"
branch = "main"
