[package]
name = "zako3-emoji-matcher"
version = "0.1.0"
edition = "2024"

[lib]
name = "zako3_emoji_matcher"
path = "src/lib.rs"

[[bin]]
name = "zako3-emoji-matcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.45.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http2"] }
bytes = "1.11.0"
derive_more = { version = "2.1.1", features = ["from", "into", "from_str"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
image = "0.24.7"
imagehash = "0.3.0"
lazy_static = "1.5.0"
mockall = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
parking_lot = "0.12.5"
pgvector = { version = "0.4.1", features = ["sqlx"] }
prometheus = "0.14.0"
prost = "0.11"
prost-types = "0.11"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
