[package]
name    = "zako3-tap-sdk"
version = "0.1.0"
edition = "2024"

[features]
auto-encode = ["dep:ogg", "dep:tokio-stream"]

[dependencies]
zakofish = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
bytes        = "1"
protofish2   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
rustls       = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

ogg          = { version = "0.9", features = ["async"], optional = true }
tokio-stream = { version = "0.1", optional = true }
