[package]
name = "zako3-types"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_more = { version = "2.1.1", features = ["from", "into", "from_str", "display"] }
redis = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
songbird.workspace = true
tokio = { workspace = true, features = ["full"] }
symphonia = { version = "0.5.5", features = ["all"] }

uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["uuid", "chrono"] }

