[package]
name = "zakoctl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive", "string", "color", "env", "wrap_help"] }
clap_complete = "4.5"
tonic = "0.14.2"
prost = "0.14.1"
anyhow = "1.0"
colored = "2.1"
zako3-audio-engine-protos = { workspace = true }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
dirs = "6.0.0"
serde_yaml = "0.9.34"
comfy-table = "7.2.1"

[[bin]]
name = "zakoctl"
path = "src/main.rs"
