[package]
name = "zakoctl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive", "string", "color", "env", "wrap_help"] }
clap_complete = "4.5"
anyhow = "1.0"
colored = "2.1"
zako3-audio-engine-controller = { workspace = true }
zako3-types = { workspace = true }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
dirs = "6.0.0"
serde_yaml = "0.9.34"
comfy-table = "7.2.1"
jsonrpsee = { version = "0.24", features = ["http-client", "macros"] }
http = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "zakoctl"
path = "src/main.rs"
