[package]
name = "zakofish"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes = "1.11.1"
protofish2 = "0.3.0"
rmp-serde = "1.3.1"
rustls = "0.23.37"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
zako3-types = { version = "0.1.0", path = "../types" }

[dev-dependencies]
rcgen = "0.14.7"
rustls = { version = "0.23.37", features = ["ring"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
