[package]
name = "zako3-audio-engine-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
lapin = "4.4.0"
futures-util = "0.3.32"
uuid = { workspace = true }
anyhow = { workspace = true }
zako3-audio-engine-core = { workspace = true }
