[package]
name = "zako3-audio-engine-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6.2", features = ["validate-request"] }
http = "1.1"
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird.workspace = true
zako3-types.workspace = true
zako3-audio-engine-core.workspace = true
zako3-audio-engine-infra.workspace = true
zako3-audio-engine-telemetry.workspace = true
zako3-taphub-transport-client.workspace = true
tracing = "0.1.44"
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
