[package]
name = "zako3-audio-engine-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
redis = { version = "1.1.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
songbird.workspace = true
zako3-audio-engine-audio.workspace = true
zako3-audio-engine-core.workspace = true
zako3-types.workspace = true
