[package]
name = "zako3-audio-engine-types"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from", "into", "from_str", "display"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp"] }
songbird = "0.5.0"
symphonia = "0.5.5"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
