[package]
name = "zako3-states"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
futures-util = "0.3.32"
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zako3-types.workspace = true

[features]
redis = ["dep:redis"]
