[package]
name = "zako3-types"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
zod_gen.workspace = true
zod_gen_derive = "1.3.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_more = { version = "2.1.1", features = ["from", "into", "from_str", "display", "default", "add"] }
redis = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
songbird.workspace = true
tokio = { workspace = true, features = ["full"] }
symphonia = { version = "0.5.5", features = ["all"] }

uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["uuid", "chrono"] }

jsonrpsee.workspace = true
zakofish.workspace = true
