[package]
name = "zakofish-taphub"
version = "0.1.0"
edition = "2024"

[dependencies]
zakofish = { path = "../../libs/zakofish" }
zako3-types = { path = "../types" }
async-trait.workspace = true
protofish2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true

[dev-dependencies]
bytes = "1.11.1"
rcgen = "0.14.7"
rustls = { version = "0.23.37", features = ["ring"] }
protofish2.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
zakofish = { path = "../../libs/zakofish" }
