[package]
name = "hq-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hq-core = { workspace = true }
hq-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
jsonrpsee.workspace = true
