[package]
name = "hq-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hq-core = { workspace = true }
hq-types = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
futures-util = "0.3"
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tower = { version = "0.4", features = ["full"] }
http = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
jsonrpsee.workspace = true
zako3-states = { version = "0.1.0", path = "../../crates/states", features = ["redis"] }
