[package]
name = "hq-boot"
version = "0.1.0"
edition = "2021"

[dependencies]
hq-core = { workspace = true }
hq-backend = { workspace = true }
hq-bot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
async-nats = { workspace = true }
futures-util = "0.3"
