[package]
name = "hq-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
hq-core = { workspace = true }
hq-types = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
zako3-states = { version = "0.1.0", path = "../../crates/states", features = ["redis"] }
