[package]
name = "zako3_hq_server"
authors = ["Allen Han <mail@drchi.co.kr>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[lib]
name = "zako3_hq_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["http2", "macros", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
bitfield-struct = "0.11.0"
bitflags = { version = "2.9.4", features = ["serde"] }
chrono = "0.4.42"
delegate = "0.13.4"
dotenvy = { version = "0.15.7", optional = true }
hmac = "0.12.1"
jwt = "0.16.0"
mockall = "0.13.1"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["connection-manager", "json", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["postgres", "redis"] }
