[package]
name = "zako3-tts-matching-sdk"
version = "0.1.0"
edition = "2024"
authors = ["mincomk <mail@drchi.co.kr>"]
description = "SDK for TTS matching, which is a part of the Tap SDK. This crate provides utilities for making WASM-based text pre-processing logic."
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
