[package]
name = "zakofish"
version = "0.1.1"
edition = "2024"
authors = ["mincomk <mail@drchi.co.kr>"]
description = "Implementation of the Zakofish API, which is for communication between Zako3 infra and Tap"
license = "MIT"

[dependencies]
async-trait.workspace = true
bytes = "1.11.1"
protofish2.workspace = true
rmp-serde = "1.3.1"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true

[dev-dependencies]
rcgen = "0.14.7"
rustls = { version = "0.23.37", features = ["ring"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
