[package]
name = "zako3-taphub-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
mockall.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zako3-types = { path = "../../types" }
tokio = { workspace = true, features = ["full"] }
zako3-taphub-transport-server = { path = "../transport/server" }
protofish2 = "0.4"
bytes = "1"
