[package]
name = "zako3-taphub-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
mockall.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zako3-types = { path = "../../types" }
tokio = { workspace = true, features = ["full"] }
zako3-taphub-transport-server = { path = "../transport/server" }
protofish2 = "0.4"
bytes = "1"
opus = "0.3.1"
tracing.workspace = true
config.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
rustls = "0.23.37"
rustls-pki-types = "1.14.0"
serde.workspace = true
rustls-pemfile = "2.2.0"
zakofish.workspace = true
