[package]
name = "zako3-taphub-core"
version = "0.1.0"
edition = "2024"

[dependencies]
zako3-telemetry = { workspace = true }
opentelemetry = "0.31"
async-trait.workspace = true
mockall.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zako3-types = { path = "../../types" }
tokio = { workspace = true, features = ["full"] }
zako3-taphub-transport-server = { path = "../transport/server" }
protofish2.workspace = true
bytes = "1"
opus = "0.3.1"
tracing.workspace = true
config.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
rustls = "0.23.37"
rustls-pki-types = "1.14.0"
serde.workspace = true
rustls-pemfile = "2.2.0"
zakofish.workspace = true
parking_lot = "0.12.5"
uuid.workspace = true
dashmap = "6.1.0"
jsonrpsee.workspace = true
http = "1.0"
zako3-states = { version = "0.1.0", path = "../../crates/states", features = ["redis"] }
zako3-preload-cache = { path = "../../crates/preload-cache" }
sha2 = "0.10"
hex = "0.4"
chrono.workspace = true
