[package]
name = "zako3-cache-gc"
version = "0.1.0"
edition = "2024"

[lib]
name = "zako3_cache_gc"
path = "src/lib.rs"

[[bin]]
name = "cache-gc"
path = "src/main.rs"

[dependencies]
zako3-preload-cache = { path = "../../crates/preload-cache" }
zako3-states        = { path = "../../crates/states", features = ["redis"] }
zako3-types         = { workspace = true }

tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
chrono              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }

# Opus packet validation (system libopus via pkg-config, or set OPUS_STATIC=1 for static link)
opus = "0.3"

[dev-dependencies]
tempfile = "3"
